--- a/Customer/Sidebar.css
+++ b/Customer/Sidebar.css
@@ -1,3 +1,14 @@
+body{
+    background-color: #ffffff;
+}
+
+header {
+    display: flex;
+    justify-content: center;
+    background-color: #f1f1f1;
+    border-radius: 25px;
+}
+
 .sidebar {
     height: 100%;
     width: 0;
@@ -13,10 +24,16 @@
 .sidebaricon {
     font-size: 30px;
     position: fixed;
+    display: flex;
     top: 15px;
     left: 15px;
     cursor: pointer;
     color: #818181;
+}
+
+.sidebaricon i{
+    display: flex;
+    justify-content: center;
 }
 
 .icon{
