--- a/Customer/Sidebar.css
+++ b/Customer/Sidebar.css
@@ -56,6 +56,7 @@ header {
     color: #818181;
     display: block;
     transition: 0.3s;
+    justify-content: space-between;
 }
 
 .sidebar a:hover {
