--- a/Customer/Sidebar.css
+++ b/Customer/Sidebar.css
@@ -9,19 +9,6 @@ header {
     border-radius: 25px;
 }
 
-.sidebar {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: #000000;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
-    border-top-right-radius: 35px;
-}
-
 .sidebaricon {
     font-size: 30px;
     display: block;
@@ -49,6 +36,20 @@ header {
 
 .icon .active {
     display: block;
+}
+
+.sidebar {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: #000000;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+    border-top-right-radius: 35px;
+    border-bottom-right-radius: 100px;
 }
 
 .sidebar a {
