--- a/Super/Add.css
+++ b/Super/Add.css
@@ -7,6 +7,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
+    background-image: url('img/1.png');
 }
 
 .main {
@@ -17,13 +18,13 @@ body {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-h1 {
+.main h1 {
     font-size: 2em;
     color: #333;
     margin-bottom: 10px;
 }
 
-h2 {
+.main h2 {
     font-size: 1.2em;
     color: #555;
     margin-bottom: 20px;
@@ -64,7 +65,7 @@ h2 {
     box-sizing: border-box;
 }
 
-button[type="submit"] {
+.registerbar button{
     background-color: #008CBA;
     color: white;
     padding: 12px 20px;
@@ -75,6 +76,6 @@ button[type="submit"] {
     width: 100%;
 }
 
-button[type="submit"]:hover {
+.registerbar button:hover {
     background-color: #007B9A;
 }
