--- a/Super/Add.css
+++ b/Super/Add.css
@@ -7,7 +7,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-image: url('img/1.png');
+    background-image: url("");
 }
 
 .main {
@@ -15,7 +15,7 @@ body {
     background-color: #fff;
     padding: 30px;
     border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 6px 15px rgba(1, 255, 213, 0.1);
 }
 
 .main h1 {
