--- a/Super/Add.css
+++ b/Super/Add.css
@@ -7,7 +7,7 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background-image: url("");
+    background-image: url("../Picture/2.jpg");
 }
 
 .main {
